[package]
name = "rust-counter-strings"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Chaplin <thomaschaplin@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/thomaschaplin/counter-strings"
homepage = "https://github.com/thomaschaplin/counter-strings"
documentation = "https://github.com/thomaschaplin/rust-counter-strings#readme"
description = """
Generate self-describing strings of a given length to help aid software testing
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.8.0"

[features]
grapheme = []

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
